and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Octover 16, 2014 A. Dotti (global-V10-00-37)
- Fixing G4ThreadLocalSingleton destructor

October 16, 2014 A. Dotti (global-V10-00-36)
- Introduced G4MUTEXDESTROY macro

October 9, 2014 A. Dotti (global-V10-00-35)
- Adding methods G4MTcoutDestination::GetPrefixString() and
  G4MTcoutDestination::GetFullPrefixString() that return the
  thread cout identification prefix respectively without and
  with thread ID. Requested by visualization

September 23, 2014 G.Cosmo (global-V10-00-34)
- Use G4Exp, G4Log and G4Pow to speedup G4JTPolynomialSolver.
- Updated dates and tag-ID.

August 29, 2014 A.Dotti (global-V10-00-33)
- Coverity fix #58649.

August 19, 2014 M.Asai (global-V10-00-32)
- Recover G4PhysicsModelCatalog::Destroy() that has slipped out
  from previous tag.

August 19, 2014 K.Genser (global-V10-00-31)
- G4PhysicsModelCatalog: made it more const; hide operator= and copy c'tor.
  Co-works with tag "track-V10-00-04"

August 5, 2014 V.Ivanchenko (global-V10-00-30)
- G4PhysicsModelCatalog: make destructor public in order delete the class
  at exit.
- G4Pow: fixed destruction.

August 5, 2014 V.Ivanchenko (global-V10-00-29)
- G4Pow: make destructor public in order delete the class at exit.

July 21, 2014 V.Ivanchenko (global-V10-00-28)
- G4PhysicsVector: removed G4Allocator.
- G4PhysicsModelCatalog: added destruction of catalog.

July 14, 2014 G.Cosmo (global-V10-00-27)
- Added symbol to exclusion list in windefs.h.

July 1, 2014 A.Dotti (global-V10-00-26)
- Added std::flush to receiving of G4MTcoutDestination.
  Addressing problem report #1644.

June 13, 2014 A.Dotti (global-V10-00-25)